objects/Incident__c.object
<CustomObject>
    <fields>
        <fullName>Bug_ID__c</fullName>
        <label>Bug ID #</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incident_End_Date__c</fullName>
        <label>Incident End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incident_Object_Type__c</fullName>
        <label>Incident Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch Ticketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Start_Date__c</fullName>
        <label>Incident Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incident_Status__c</fullName>
        <label>Incident Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Service_Now_Id__c</fullName>
        <label>IOPs Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Incident</label>
    <nameField>
        <label>Incident Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>DefaultView</fullName>
        <columns>NAME</columns>
        <columns>Incident_Object_Type__c</columns>
        <columns>Incident_Status__c</columns>
        <columns>Incident_Start_Date__c</columns>
        <columns>Incident_End_Date__c</columns>
        <columns>Service_Now_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>_DefaultView</label>
        <language>en_US</language>
        <sharedTo>
            <group>AppSupport_Cvent</group>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>AppSupport_BugID</fullName>
        <active>true</active>
        <errorConditionFormula>NOT
(isblank( Bug_ID__c )) &amp;&amp; not(REGEX( Bug_ID__c ,"(((?i)(prod|ccd|aps|mobca|cmbol|tmdev))-\\d+|((?i)(prod|ccd|aps|mobca|cmbol|tmdev))-\\d+,){1,}"))</errorConditionFormula>
        <errorMessage>Bug ID must be in format (PROD | CCD | APS | MOBCA | CMBOL | TMDEV)-####</errorMessage>
    </validationRules>
</CustomObject>